--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react-dom": "18.2.7",
     "bufferutil": "^4.0.9",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
